--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="chip_spacing">8dp</dimen>
+    <dimen name="chip_reason_corner">999dp</dimen>   <!-- pill -->
+    <dimen name="chip_reason_min_height">36dp</dimen>
+    <dimen name="chip_reason_padding_h">16dp</dimen>
+    <dimen name="chip_reason_stroke">1dp</dimen>
 </resources>
