--- a/app/src/main/res/layout/activity_choose_seat.xml
+++ b/app/src/main/res/layout/activity_choose_seat.xml
@@ -331,7 +331,7 @@
 
 
     <TextView
-        android:id="@+id/tvCountdown"
+        android:id="@+id/tv_countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5:00"
@@ -346,26 +346,25 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="32dp"
         android:text="vnđ"
-        android:textColor="@color/darkGrey"
         android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
-        app:layout_constraintBottom_toBottomOf="@+id/tvCountdown"
+        android:textColor="@color/darkGrey"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_drop_off"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvCountdown" />
+        app:layout_constraintTop_toTopOf="@+id/tv_seats_selected" />
 
     <TextView
         android:id="@+id/tv_total_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
         android:text="230000"
-        android:textSize="14sp"
-        android:textColor="@color/blue_text_price"
         android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-        app:layout_constraintBottom_toBottomOf="@+id/tvCountdown"
-        app:layout_constraintEnd_toStartOf="@+id/textView14"
-        app:layout_constraintTop_toTopOf="@+id/tvCountdown" />
+        android:textColor="@color/blue_text_price"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView14"
+        app:layout_constraintEnd_toStartOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/textView16"
