--- a/app/src/main/res/layout/activity_chose_payment.xml
+++ b/app/src/main/res/layout/activity_chose_payment.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
-    android:layout_marginTop="30dp"
+    android:layout_marginTop="39dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA">
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_weight="1"
-                    android:text="Thanh toán tiền mặt"
+                    android:text="Thanh toán khi lên xe"
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
