--- a/app/src/main/res/layout/item_my_ticket.xml
+++ b/app/src/main/res/layout/item_my_ticket.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="140dp"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginTop="8dp"
     android:background="@drawable/bg_ticket">
 
     <androidx.constraintlayout.widget.Guideline
@@ -44,13 +46,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tv_payment_status_my_ticket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@color/orangeDrak"
-            android:padding="4dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
             android:text="Chưa thanh toán"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
             android:textColor="@color/white"
@@ -58,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tv_trip_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -67,8 +70,8 @@
             android:text="Đã hủy"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintStart_toStartOf="@+id/tv_payment_status_my_ticket"
+            app:layout_constraintTop_toBottomOf="@+id/tv_payment_status_my_ticket" />
 
         <TextView
             android:id="@+id/textView7"
@@ -77,20 +80,21 @@
             android:layout_marginTop="16dp"
             android:text="Giá: "
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
-            app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintStart_toStartOf="@+id/tv_trip_status"
+            app:layout_constraintTop_toBottomOf="@+id/tv_trip_status" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/tv_ticket_price_my_ticket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="230,000 vnđ"
+            android:textColor="@color/text_main_driver"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_trip_status" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
@@ -108,18 +112,20 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tvCountdown"
+                android:id="@+id/tv_ticket_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:text="Mã vé: 000000"
+                android:maxLength="16"
                 android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_de_time_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -163,6 +169,7 @@
                 app:tint="@color/black" />
 
             <TextView
+                android:id="@+id/tv_route_name_my_ticket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
@@ -183,6 +190,7 @@
                 app:tint="@color/black" />
 
             <TextView
+                android:id="@+id/tv_de_time_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
@@ -190,6 +198,7 @@
                 android:textAppearance="@style/TextAppearance.Material3.BodySmall" />
 
             <TextView
+                android:id="@+id/tv_trip_date_my_ticket"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
