--- a/app/src/main/res/layout/item_ticket.xml
+++ b/app/src/main/res/layout/item_ticket.xml
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tvCountdown"
+                android:id="@+id/tv_ticket_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
