--- a/app/src/main/res/layout/layout_header_nav_drawer.xml
+++ b/app/src/main/res/layout/layout_header_nav_drawer.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_ticket_price_my_ticket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -25,8 +25,8 @@
         android:text="@string/title_branium"
         android:textAppearance="?attr/textAppearanceTitleSmall"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintStart_toStartOf="@+id/tv_ticket_price_my_ticket"
+        app:layout_constraintTop_toBottomOf="@+id/tv_ticket_price_my_ticket" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView8"
@@ -34,8 +34,8 @@
         android:layout_height="64dp"
         android:layout_marginTop="8dp"
         app:cardCornerRadius="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="@+id/tv_ticket_price_my_ticket"
+        app:layout_constraintStart_toStartOf="@+id/tv_ticket_price_my_ticket"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
