--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,18 +113,35 @@
     <!--        android:textColor="#3b608c" />-->
 
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/white_bg_1"
-        android:drawableStart="@drawable/googleg_standard_color_18"
-        android:paddingHorizontal="12dp"
         android:id="@+id/btnGoogleSignIn"
-        android:text="Đăng nhập bằng google"
-        android:textAllCaps="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="188dp"
+        android:background="@drawable/white_bg_1"
+        android:drawableStart="@drawable/googleg_standard_color_18"
+        android:paddingHorizontal="12dp"
+        android:text="Đăng nhập bằng google"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnAuthWithPhoneNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/dark_bg"
+        android:drawableStart="@drawable/baseline_phone_android_24"
+        android:paddingHorizontal="12dp"
+        android:text="Đăng nhập bằng số điện thoại"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/btnGoogleSignIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
