--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,6 +79,25 @@
         app:layout_constraintTop_toBottomOf="@id/greetingText"
         tools:ignore="HardcodedText,TextContrastCheck" />
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        app:cardCornerRadius="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" >
+
+        <ImageView
+            android:id="@+id/imageView13"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="15dp"
+            android:src="@drawable/ic_message"
+            app:tint="@color/orangeDrak" />
+    </androidx.cardview.widget.CardView>
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
