--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -117,4 +117,6 @@
     <color name="red_dark">#C62828</color>
     <color name="gray_light">#F5F5F5</color>
     <color name="gray_dark">#757575</color>
+    <color name="input_background">#F8F9FA</color>
+
 </resources>
