--- a/app/src/main/res/drawable/bg_btn_successfull.xml
+++ b/app/src/main/res/drawable/bg_btn_successfull.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#06A21C"/>
+            <solid android:color="@color/text_main_driver"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
