--- a/app/src/main/res/layout/fragment_main_driver_home.xml
+++ b/app/src/main/res/layout/fragment_main_driver_home.xml
@@ -98,6 +98,7 @@
         tools:ignore="TextSizeCheck">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/trip_info"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/white_bg_stroke_3">
