--- a/app/src/main/res/layout/fragment_my_map.xml
+++ b/app/src/main/res/layout/fragment_my_map.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map_container"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="400dp"
-    tools:context=".ui.a_main_driver_ui.home.map.MyMapFragment" />
+    android:layout_height="match_parent"
+    tools:context=".ui.a_main_driver_ui.home.map.MyMapFragment">
+
+    <!-- Container của Google Map -->
+    <FrameLayout
+        android:id="@+id/map_container"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
+
+    <!-- Thành phần khác -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTimeline"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="8dp" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="32dp"
+        android:textColor="@color/white"
+        android:background="@drawable/main_driver_button"
+        android:text="Xác nhận đi" />
+
+
+</LinearLayout>
