completed admin management

--- a/app/src/main/res/layout/activity_contact_information.xml
+++ b/app/src/main/res/layout/activity_contact_information.xml
@@ -168,6 +168,7 @@
         android:ems="10"
         android:hint="Họ và tên"
         android:inputType="text"
+        android:text="Hoàng Tiến An"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -187,6 +188,7 @@
         android:ems="10"
         android:inputType="text"
         android:hint="Sđt"
+        android:text="0326699576"
         android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
         android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
