--- a/app/src/main/res/layout/activity_statistics_admin.xml
+++ b/app/src/main/res/layout/activity_statistics_admin.xml
@@ -108,7 +108,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Tổng doanh thu tuần:"
+                        android:text="Tổng doanh thu tháng:"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
