--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,19 +6,19 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home"
+        android:title="Trang chủ"
         app:showAsAction="ifRoom|withText"
         tools:ignore="HardcodedText" />
     <item
         android:id="@+id/nav_ticket"
         android:icon="@drawable/baseline_airplane_ticket_24"
-        android:title="Ticket"
+        android:title="Vé của tôi"
         app:showAsAction="ifRoom|withText"
         tools:ignore="HardcodedText" />
     <item
         android:id="@+id/nav_account"
         android:icon="@drawable/ic_person_24"
-        android:title="Account"
+        android:title="Tài khoản"
         app:showAsAction="ifRoom|withText"
         tools:ignore="HardcodedText" />
 </menu>
